--- a/config/database.yml
+++ b/config/database.yml
@@ -59,6 +59,10 @@ test:
   <<: *default
   database: interview-project_test
 
+integration:
+  <<: *default
+  database: interview-project_integration
+
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
